# climart

./: .gitignore  Cargo.toml  PROMPTS.md  README.md
src/: app.rs  main.rs
src/config/: settings.rs
src/core/: install.rs  mod.rs  resolver.rs  run.rs  search.rs
src/models/: tool.rs
src/providers/: brew.rs  mod.rs  npm.rs  pipx.rs  pkgx.rs
src/ui/: components.rs  layout.rs
src/utils/: exec.rs
