[package]
name = "climart"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "climart"
path = "src/main.rs"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
